force-app/main/default/objects/Performance_Tracker__c/Performance_Tracker__c.object-meta.xml
<CustomObject>
    <label>Performance Tracker</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Performance Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>