force-app/main/default/objects/Performance_Tracker__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <businessOwnerUser>yash.punjabi@emmbi.com.migration</businessOwnerUser>
    <formula>IF( MONTH(  Performance_Date__c  ) = 1, &apos;January&apos;, IF( MONTH(  Performance_Date__c  ) = 2, &apos;February&apos;, IF( MONTH(  Performance_Date__c  ) = 3, &apos;March&apos;, IF( MONTH(  Performance_Date__c  ) = 4, &apos;April&apos;, IF( MONTH(  Performance_Date__c  ) = 5, &apos;May&apos;, IF( MONTH(  Performance_Date__c  ) = 6, &apos;June&apos;, IF( MONTH(  Performance_Date__c  ) = 7, &apos;July&apos;, IF( MONTH(  Performance_Date__c  ) = 8, &apos;August&apos;, IF( MONTH(  Performance_Date__c  ) = 9, &apos;September&apos;, IF( MONTH(  Performance_Date__c  ) = 10, &apos;October&apos;,IF( MONTH(  Performance_Date__c  ) = 11, &apos;November&apos;,IF( MONTH(  Performance_Date__c  ) = 12, &apos;December&apos;,&apos;&apos;) )))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <type>Text</type>
</CustomField>