force-app/main/default/objects/Performance_Tracker__c/fields/Performance_Date__c.field-meta.xml
<CustomField>
    <fullName>Performance_Date__c</fullName>
    <label>Performance Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>