force-app/main/default/objects/Performance_Tracker__c/fields/Performance_Year__c.field-meta.xml
<CustomField>
    <fullName>Performance_Year__c</fullName>
    <formula>YEAR( Performance_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>