force-app/main/default/objects/Performance_Tracker__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Target_Manager__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Performance_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>