force-app/main/default/objects/Performance_Tracker__c/fields/Week_1_Target__c.field-meta.xml
<CustomField>
    <fullName>Week_1_Target__c</fullName>
    <label>Week 1 Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>